--- a/driver/modules/Makefile
+++ b/driver/modules/Makefile
@@ -1,8 +1,8 @@
-obj-m += rasp_driver.o
+obj-m += project.o
 
 KDIR = /usr/src/linux-headers-$(shell uname -r)
 
 all:
 	$(MAKE) -C $(KDIR) SUBDIRS=$(shell pwd) modules
 clean:
-	rm -rf *.o *.ko *.mod *.symvers *.order
+	rm -rf *.o *.ko *.mod.* *.symvers *.order
